<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/titleSubmission"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="550dp"
        android:text="@string/project_submission"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/Orange"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="503dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal"
            android:weightSum="100">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/appbar_padding"
                android:layout_weight="49"
                android:backgroundTint="@color/colorAccent"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp">

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:padding="@dimen/text_padding"
                    android:hint="@string/first_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/FragmentTextColor"
                    android:textStyle="bold"
                    android:textColorHint="@color/FragmentTextColor"/>
            </androidx.cardview.widget.CardView>


            <Space
                android:id="@+id/space_horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/appbar_padding"
                android:layout_weight="49"
                android:backgroundTint="@color/colorAccent"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp">

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:padding="@dimen/text_padding"
                    android:hint="@string/last_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/FragmentTextColor"
                    android:textStyle="bold"
                    android:textColorHint="@color/FragmentTextColor"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/appbar_padding"
            android:layout_marginEnd="@dimen/appbar_padding"
            android:layout_weight="10"
            android:backgroundTint="@color/colorAccent"
            app:cardCornerRadius="5dp"
            app:cardElevation="2dp">


            <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:padding="@dimen/text_padding"
                android:hint="@string/email_address"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/FragmentTextColor"
                android:textStyle="bold"
                android:textColorHint="@color/FragmentTextColor" />
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/appbar_padding"
            android:layout_marginEnd="@dimen/appbar_padding"
            android:layout_weight="10"
            android:backgroundTint="@color/colorAccent"
            app:cardCornerRadius="5dp"
            app:cardElevation="2dp">

            <EditText
                android:id="@+id/github_link"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:padding="@dimen/text_padding"
                android:hint="@string/project_on_github_link"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/FragmentTextColor"
                android:textStyle="bold"
                android:textColorHint="@color/FragmentTextColor"/>
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="10"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/Orange"
            android:paddingLeft="@dimen/submit_button_padding"
            android:paddingRight="@dimen/submit_button_padding"
            android:text="@string/submit"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="550dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/gradient_color" />

</androidx.constraintlayout.widget.ConstraintLayout>